add extra slides automatically

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 .RData
 .Ruserdata
 myConfig.R
+report.Introductions.pptx
+report.Introductions.html
+report.Introductions.log
+report.Introductions.tex
